--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -12,7 +12,8 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
-
+slackToken: ""
+slackVerificationToken: ""
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
@@ -38,7 +39,7 @@ service:
   port: 80
 
 ingress:
-  enabled: true
+  enabled: false
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
