--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
-      name: http
+      
   selector:
     {{- include "chart.selectorLabels" . | nindent 4 }}
