--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -36,10 +36,12 @@ securityContext: {}
 
 service:
   type: NodePort
-  port: 80
+  port: 666
+  targetPort: 666
+
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
