--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -41,17 +41,9 @@ service:
 
 
 ingress:
-  enabled: true
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths: ["/*"]
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  annotations:
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
 
 resources: 
   # We usually recommend not to specify default resources and to leave this as a conscious
