--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: reservebot
-description: A Helm chart for Kubernetes
+description: A Helm chart to deploy reservebot
 
 # A chart can be either an 'application' or a 'library' chart.
 #
